# gtk-deno

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  deno.json  gtk_deno.c  init.txt  main.ts  meson.build
.github/workflows/: deno.yml  publish.yml
examples/: main.ts
examples/GtkApplication/: GtkApplication.ts  GtkApplication.webview.ts
examples/GtkFileDialog/: GtkFileFilter.addFilter.ts  GtkFileFilter.default.ts  GtkFileFilter.setDefaultFilter.ts  GtkFileFilter.setFilters.ts  GtkOpenFileDialog.ts  GtkOpenMultipleFileDialog.ts  GtkSaveFileDialog.ts  GtkSelectFolderDialog.ts  GtkSelectMultipleFolderDialog.ts
lib/: mod.ts  symbols.ts  utils.ts  version.ts
lib/modules/: GLib.MainContext.ts  GObject.ts  Gio.Application.ts  Gio.File.ts  Gio.ListStore.ts  Gtk.Application.ts  Gtk.ApplicationWindow.ts  Gtk.FileDialog.ts  Gtk.FileFilter.ts  Gtk.Window.ts  Gtk.ts
native/: example.c  gtk_deno.c
native/src/: core.c  loop.c
src/: loop.ts  types.ts  utils.ts  version.ts
src/GtkApplication/: GtkApplication.ts  GtkApplicationFlags.ts  events.ts  mod.ts
src/GtkApplicationWindow/: GtkApplicationWindow.ts  events.ts  mod.ts
src/GtkFileDialog/: GtkBaseDialog.ts  GtkDialog.ts  GtkFileDialog.ts  GtkOpenFileDialog.test.ts  GtkOpenFileDialog.ts  GtkOpenMultipleFileDialog.test.ts  GtkOpenMultipleFileDialog.ts  GtkSaveFileDialog.test.ts  GtkSaveFileDialog.ts  GtkSelectFolderDialog.ts  GtkSelectMultipleFolderDialog.ts  mod.ts
src/GtkFileFilter/: GtkFileFilter.ts  mod.ts
src/lib/: GLib.Error.ts  GLib.MainContext.ts  GLib.ts  Gio.Cancellable.ts  Gio.File.ts  (+5 more)
(+22 files in other folders)
